# tone-generator

./: README.md
Desktop/tone_generator/: .cursorrules  .gitignore  AUDIO_ARCHITECTURE.md  AUDIO_DIAGNOSTIC_GUIDE.md  CMakeLists.txt  README.md  SETUP_GUIDE.md  ToneGenerator.jucer  VERIFICATION_REPORT.md  audio_diagnostic_report.txt  build_android.sh  build_ios.sh
Desktop/tone_generator/JUCE-8.0.10/modules/juce_audio_devices/: juce_audio_devices.cpp
Desktop/tone_generator/JUCE-8.0.10/modules/juce_audio_devices/native/: juce_Audio_ios.cpp  juce_Audio_ios.mm
Desktop/tone_generator/Source/: AdvancedMainComponent.cpp  AdvancedMainComponent.h  CustomLookAndFeel.cpp  Definitions.h  LookAndFeelKeyTiles.h  LookAndFeelMinimal.h  Main.cpp  MainComponent.cpp  MainComponent.h  MainComponent.mm  MainComponent_Test.h  Main_Test.cpp  PadSound.cpp  PadSound.h  PadSynthesizer.cpp  PadSynthesizer.h  PadVoice.cpp  PadVoice.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Synth.cpp  Synth.h  SynthesizerVoice.cpp  SynthesizerVoice.h  Theme.h  ToneGenerator.cpp  ToneGenerator.h  WrattDelay.cpp
Desktop/tone_generator/Source/DSPFilters/: Dsp.h
Desktop/tone_generator/Source/STK/: ADSR.cpp  ADSR.h  BlitSaw.cpp  BlitSaw.h  BlitSquare.cpp  BlitSquare.h  Chorus.cpp  Chorus.h  FreeVerb.cpp  FreeVerb.h  Noise.cpp  Noise.h  SineWave.cpp  SineWave.h  Stk.cpp  Stk.h
